--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.5",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
