--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Eng-MahmoudOthman.github.io/Store-App_Front-End",
+  "homepage": "https://Eng-MahmoudOthman.github.io",
   "name": "store-app_front-end",
   "version": "0.1.0",
   "private": true,
